# experiments

./: 2chdownloader.py  README.md  antidos.sh  donatepay_notifier.py  harulib.py  pinger.py  simple_2ch_poster.py  simple_notify.py  sitechecker.nim  tgsender.nim  tgsender.py
download_backup/: backup.py  pyproject.toml
github-actions-workflows/: generate_requirements_from_poetry.yml
py_examples/: property_in_dataclasses.py
shellscripts/: bash_telegram_notify.sh  check_vintagestory_update.sh  fail2ban_daily_report.sh  multidocker_deploy.sh
shellscripts/restic/: restic_backup_dir.sh  restic_backup_mysql.sh
shellscripts/restic/mysql_in_docker/: .env  restic_backup_mysql_in_docker.sh
shellscripts/restic/pg_in_docker/: .env  restic_backup_postgresql_in_docker.sh
shellscripts/user_deploy/: deployer.sh  user_local_deploy.sh
